# R_Pi_Src

./: README.md
dogo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  communication  communication.cpp  test1  test_py_spi.py
dogo/src/: api.c
dogo/src/include/: QuadrupedRobotObject.h  api.h  data_struct.h
dogo/temp_file/: asin_lut_gen  asin_lut_gen.cpp
test/dOwOg/: bot.py  controller.py  gait_planner.py  math_ops.py  test_spi.py
test/test_glm/: asin_lut_gen  asin_lut_gen.cpp
test/test_matplot_cpp/: CMakeLists.txt  generate_cawl_gait_plot  generate_cawl_gait_plot.cpp
